<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout_comment_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_comment_adapter"
            android:layout_width="50dp"
            android:layout_height="50dp"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/profile"
            android:layout_marginTop="10dp"
            app:civ_border_color="@color/imageView_boder_profile"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/linearLayout_description_comment_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageView_comment_adapter"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_userName_comment_adapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                     android:ellipsize="end"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:text="@string/app_sub_name"
                    android:textColor="@color/comment_text"
                    android:textSize="14sp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView_comment_adapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:includeFontPadding="false"
                android:text="@string/lorem"
                android:textSize="12sp"
                android:textColor="@color/blue_gray" />

            <TextView
                android:id="@+id/textView_date_comment_adapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:ellipsize="end"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/date"
                android:textColor="@color/blue_gray"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                 android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/view_latestListView_adapter" />

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>