<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sub_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh_sub_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_sub_author"
        android:layout_below="@+id/toolbar_sub_author">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lay_top_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageView_sub_author"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/placeholder_portable" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_name_sub_author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/app_name"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/textView_subName_sub_author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/app_name"
                                android:textColor="@color/blue_gray"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <at.blogc.android.views.ExpandableTextView
                        android:id="@+id/textViewDes_sub_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:maxLines="3"
                        android:text="@string/lorem"
                        android:textColor="@color/blue_gray"
                        android:textSize="12sp"
                        app:animation_duration="750" />

                    <TextView
                        android:id="@+id/textView_more_sub_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:text="@string/text_load_more"
                        android:textAllCaps="false"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <View
                    android:id="@+id/sec_view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/view_latestListView_adapter" />

                <LinearLayout
                    android:id="@+id/lay_sec_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/home_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:id="@+id/text_represent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/author_work"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/author_work_tag"
                            android:textColor="@color/blue_gray"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_sub_author"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="5dp" />

                    <TextView
                        android:id="@+id/textView_sub_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/no_data"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressbar_sub_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/linearLayout_sub_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>
